--- a/src/stylesheets/About.scss
+++ b/src/stylesheets/About.scss
@@ -230,13 +230,13 @@
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
         font-size: 1.875em;
-        letter-spacing: 0.025em;
+        // letter-spacing: 0.025em;
         // color: #666666;
 
         // width: 10vw;
         // height: auto;
 
-        opacity: 0.625;
+        opacity: 0.5;
 
         position: absolute;
         // top: 0;
@@ -244,6 +244,10 @@
         right: 0;
         // top: 45vh;
         // right: 12.5vw;
+
+        transition: 0.2s;
+
+        cursor: pointer;
 
         .resetThoughtsSvg {
             // border: 2px solid #0000ff;
@@ -272,6 +276,11 @@
             //     // border: 2px solid #0000ff;
             // }
         }
+    }
+
+    .resetThoughtsDiv:hover {
+        opacity: 1;
+        transform: scale(1.125);
     }
 }
 
@@ -311,24 +320,24 @@
 
                 h1 {
                     font-size: 1.5em;
-                    letter-spacing: -0.025em;
+                    // letter-spacing: -0.025em;
                     line-height: 1em;
                 }
 
                 h2 {
                     font-size: 1.375em;
-                    letter-spacing: -0.0375em;
+                    // letter-spacing: -0.0375em;
                 }
 
                 h3 {
                     font-size: 1.25em;
-                    letter-spacing: -0.025em;
+                    // letter-spacing: -0.025em;
                     line-height: 1.125em;
                 }
 
                 .credit {
                     font-size: 1em;
-                    letter-spacing: 0.025em;
+                    // letter-spacing: 0.025em;
                     line-height: 1.375em;
 
                     padding: 0.5vh 0 0 0;
@@ -336,7 +345,7 @@
 
                 .plea {
                     font-size: 0.6875em;
-                    letter-spacing: 0.0375em;
+                    // letter-spacing: 0.0375em;
 
                     padding: 0.0625vh 0 1.25vh 0;
                 }
@@ -423,24 +432,24 @@
 
                 h1 {
                     font-size: 2em;
-                    letter-spacing: -0.025em;
+                    // letter-spacing: -0.025em;
                     line-height: 0.9375em;
                 }
 
                 h2 {
                     font-size: 1.75em;
-                    letter-spacing: -0.0375em;
+                    // letter-spacing: -0.0375em;
                 }
 
                 h3 {
                     font-size: 1.625em;
-                    letter-spacing: -0.025em;
+                    // letter-spacing: -0.025em;
                     line-height: 0.9375em;
                 }
 
                 .credit {
                     font-size: 1.3125em;
-                    letter-spacing: 0.025em;
+                    // letter-spacing: 0.025em;
                     line-height: 1.375em;
 
                     padding: 0.5vh 0 0 0;
@@ -448,7 +457,7 @@
 
                 .plea {
                     font-size: 1.125em;
-                    letter-spacing: 0.0375em;
+                    // letter-spacing: 0.0375em;
 
                     padding: 0.0625vh 0 1.25vh 0;
                 }
@@ -523,31 +532,31 @@
                 // border: 2px solid #ff0000;
 
                 text-align: center;
-                letter-spacing: 0.0625em;
+                // letter-spacing: 0.0625em;
 
                 // padding: 0 0 10px 0;
                 padding: 0 0 0.5vh 0;
 
                 h1 {
                     font-size: 2em;
-                    letter-spacing: 0.05em;
+                    // letter-spacing: 0.05em;
                     line-height: 1em;
                 }
 
                 h2 {
                     font-size: 1.75em;
-                    letter-spacing: 0.025em;
+                    // letter-spacing: 0.025em;
                 }
 
                 h3 {
                     font-size: 1.625em;
-                    letter-spacing: 0.04125em;
+                    // letter-spacing: 0.04125em;
                     line-height: 1.25em;
                 }
 
                 .credit {
                     font-size: 1.3125em;
-                    letter-spacing: 0.025em;
+                    // letter-spacing: 0.025em;
                     line-height: 1.375em;
 
                     padding: 0.5vh 0 0 0;
@@ -555,7 +564,7 @@
 
                 .plea {
                     font-size: 1.125em;
-                    letter-spacing: 0.0375em;
+                    // letter-spacing: 0.0375em;
 
                     padding: 0.0625vh 0 1.25vh 0;
                 }
@@ -629,14 +638,14 @@
                 // border: 2px solid #00ffff;
 
                 text-align: center;
-                letter-spacing: 0.0625em;
+                // letter-spacing: 0.0625em;
 
                 // padding: 0 0 10px 0;
                 padding: 0 0 0.5vh 0;
 
                 h1 {
                     font-size: 2.5em;
-                    letter-spacing: 0.005em;
+                    // letter-spacing: 0.005em;
                     line-height: 1.125em;
                 }
 
@@ -647,12 +656,12 @@
 
                 h3 {
                     font-size: 1.625em;
-                    letter-spacing: 0.025em;
+                    // letter-spacing: 0.025em;
                 }
 
                 .credit {
                     font-size: 1.3125em;
-                    letter-spacing: 0.025em;
+                    // letter-spacing: 0.025em;
                     line-height: 1.375em;
 
                     padding: 0.5vh 0 0 0;
@@ -660,7 +669,7 @@
 
                 .plea {
                     font-size: 1.125em;
-                    letter-spacing: 0.0375em;
+                    // letter-spacing: 0.0375em;
 
                     padding: 0.0625vh 0 1.25vh 0;
                 }
