--- a/src/stylesheets/Header.scss
+++ b/src/stylesheets/Header.scss
@@ -1,7 +1,7 @@
 @import './Global.scss';
 
 
-/* #region ========================= BASE ========================= */
+/* #region ==================== BASE (iPAD 1024 x 768 Retina... WTF?!) ==================== */
 
 .header * {
     margin: 0;
@@ -520,41 +520,24 @@
         .resumeNav {
             // border: 1px solid #00ffff;
 
-            @include bgGradient06();
+            // @include bgGradient06();
+            @include bgGradient07();
 
             color: #000000;
             text-align: center;
             line-height: 1.5em;
 
-            // width: $body-width;
-            // min-width: $body-min-width;
-            // max-width: $body-max-width;
-            width: 20%;
-
+            width: 15vw;
             height: $workNav-height * 0.5;
 
-            // margin: 0 auto;
-            // margin: 0 0 0 80%;
-            // margin: $header-height 0 0 80%;
-            // margin: $navBar-height 0 0 80%;
-            margin: ($navBar-height + 1) 0 0 80%;
-            // margin: $workNav-height 0 0 80%;
-
+            margin: 0;
             padding: 0;
-            // padding: 5px 0 0 0;
 
-            // position: absolute;
-            // position: relative;
-            // top: 0;
-            // top: 100px;
-            // top: $header-height;
-            // top: $workNav-height;
-            // top: $navBar-height + 1;
-            // top: $navBar-height * 2;
-            // top: calc($header-height + $workNav-height);
-            // left: 0;
-            // right: 0;
-            // right: 0;
+            position: inherit;
+            // top: 5px;
+            // top: $workNav-height * 0.125 - 1;
+            top: $navBar-height + 1;
+            right: 2.5vw;
             z-index: -1;
 
             cursor: pointer;
@@ -583,72 +566,7 @@
 
 }
 
-/* #endregion ========================= BASE ========================= */
-
-
-
-/* #region ========================= DESKTOPS: 1920px+ ========================= */
-
-@media  
-    // only screen and (min-device-width: 1441px)
-    only screen and (min-device-width: 1920px)
-    { 
-        .header {
-            // border: 02px solid #ff0000;
-
-            .hed {
-                // border: 02px solid #00ff00;
-
-                font-size: 2.5em;
-
-                // // width: $body-width;
-                // width: 50vw;
-                // min-width: $body-min-width;
-                // // max-width: $body-max-width;
-
-                .hed02 {
-                    // border: 02px solid #00ffff;
-
-                    left: calc(156.25px + 320px);
-                }
-            }
-        }
-    }
-
-/* #endregion ========================= DESKTOPS: 1920px+ ========================= */
-
-
-
-/* #region ========================= LAPTOPS: 1440px+ ========================= */
-
-@media  
-    // only screen and (min-device-width: 992px) 
-    // only screen and (min-device-width: 992px), 
-    only screen and (max-device-width: 1440px) 
-    { 
-        // .header {
-        //     border: 02px solid #00ff00;
-        // }
-    }
-
-/* #endregion ========================= LAPTOPS: 1440px+ ========================= */
-
-
-
-/* #region ========================= TABLETS / CRAPTOPS: 1024px ========================= */
-
-@media  
-    // only screen and (min-device-width: 768px) 
-    // only screen and (min-device-width: 768px), 
-    // only screen and (max-device-width: 991px)
-    only screen and (max-device-width: 1024px)
-    { 
-        // .header {
-        //     border: 02px solid #0000ff;
-        // }
-    }
-
-/* #endregion ========================= TABLETS / CRAPTOPS: 1024px ========================= */
+/* #endregion ==================== BASE (iPAD 1024 x 768 Retina... WTF?!) ==================== */
 
 
 
@@ -783,10 +701,6 @@
                 /* #endregion -------------------- .navBar -------------------- */
 
 
-                // .workNav, .resumeNav {
-                //     visibility: hidden;
-                // }
-
                 /* #region -------------------- .workNav -------------------- */
 
                 .workNav {
@@ -817,6 +731,45 @@
                 }
 
                 /* #endregion -------------------- .workNav -------------------- */
+
+
+                /* #region -------------------- .resumeNav -------------------- */
+
+                .resumeNav {
+                    // border: 1px solid #00ffff;
+
+                    // // @include bgGradient06();
+                    // @include bgGradient07();
+
+                    // color: #000000;
+                    font-size: 1.25em;
+                    line-height: 2.75em;
+                    // text-align: center;
+
+                    width: 35vw;
+                    height: $workNav-height * 0.75;
+
+                    margin: 0;
+                    padding: 0;
+
+                    // position: inherit;
+                    // // top: 5px;
+                    // // top: $workNav-height * 0.125 - 1;
+                    top: 0;
+                    // right: 2.5vw;
+                    z-index: 1;
+
+                    // cursor: pointer;
+
+                    // p {
+                    //     // border: 1px solid #ff00ff;
+                    //     height: inherit;
+                    //     margin: 0 auto;
+                    //     padding: 0;
+                    // }
+                }
+
+                /* #endregion -------------------- .resumeNav -------------------- */
             }
 
             /* #endregion -------------------- .navBarContainer -------------------- */
@@ -877,3 +830,104 @@
     }
 
 /* #endregion ========================= MOBILE: 414px ========================= */
+
+
+
+/* #region ========================= TABLETS / CRAPTOPS: 1024px ========================= */
+
+@media  
+    // only screen and (min-device-width: 768px) 
+    // only screen and (min-device-width: 768px), 
+    // only screen and (max-device-width: 991px) 
+    only screen and (min-device-width: 1024px)
+    { 
+        .header {
+            // border: 02px solid #00ff00;
+
+            .navBarContainer {
+                // border: 2px solid #00ff00;
+
+                .resumeNav {
+                    // border: 1px solid #00ffff;
+
+                    width: 12.5vw;
+                    // right: 12.5vw;
+                }
+            }
+        }
+    }
+
+/* #endregion ========================= TABLETS / CRAPTOPS: 1024px ========================= */
+
+
+
+/* #region ========================= LAPTOPS: 1440px ========================= */
+
+@media  
+    // only screen and (min-device-width: 992px) 
+    // only screen and (min-device-width: 992px), 
+    // only screen and (min-device-width: 1366px)
+    only screen and (min-device-width: 1440px)
+    { 
+        // .header {
+        //     // border: 02px solid #00ff00;
+
+        //     .navBarContainer {
+        //         // border: 2px solid #00ff00;
+
+        //         .resumeNav {
+        //             // border: 1px solid #00ffff;
+
+        //             width: 12.5vw;
+        //             // right: 12.5vw;
+        //         }
+        //     }
+        // }
+    }
+
+/* #endregion ========================= LAPTOPS: 1440px+ ========================= */
+
+
+
+/* #region ========================= DESKTOPS: 1920px+ ========================= */
+
+@media  
+    // only screen and (min-device-width: 1441px)
+    only screen and (min-device-width: 1920px)
+    { 
+        .header {
+            // border: 02px solid #ff0000;
+
+            .hed {
+                // border: 02px solid #00ff00;
+
+                font-size: 2.5em;
+
+                // // width: $body-width;
+                // width: 50vw;
+                // min-width: $body-min-width;
+                // // max-width: $body-max-width;
+
+                .hed02 {
+                    // border: 02px solid #00ffff;
+
+                    left: calc(156.25px + 320px);
+                }
+            }
+
+            .navBarContainer {
+                // border: 2px solid #00ff00;
+
+                .resumeNav {
+                    // border: 1px solid #00ffff;
+
+                    font-size: 1.125em;
+                    width: 10vw;
+                    height: $workNav-height * 0.625;
+                    // right: 12.5vw;
+                }
+            }
+        }
+    }
+
+/* #endregion ========================= DESKTOPS: 1920px+ ========================= */
