--- a/src/stylesheets/Resume.scss
+++ b/src/stylesheets/Resume.scss
@@ -15,7 +15,7 @@
 }
 
 .employerContainer {
-    // border: 2px solid #ff0000;
+    // border: 2px solid #00ffff;
 
     // letter-spacing: 0.0375em;
 
@@ -132,7 +132,8 @@
         text-align: left;
 
         margin: 0 auto;
-        padding: 125px 0 0 5%;
+        // padding: 125px 0 0 5%;
+        padding: 125px 0 0 0;
 
         .employerItem {
             // border: 1px solid #ff00ff;
@@ -183,7 +184,7 @@
         height: 8.75em;
 
         // margin: 0;
-        padding: 0 0 0 5%;
+        // padding: 0 0 0 5%;
 
         position: relative;
 
@@ -214,7 +215,7 @@
 
         font-size: 0.9375em;
 
-        padding: 0 0 0 5%;
+        // padding: 0 0 0 5%;
 
         .skillCatHed {
             // border: 2px solid #ff0000;
@@ -300,28 +301,6 @@
     }
 }
 
-.dialogHotspot {
-    // border: 2px solid #ff0000;
-
-    // background: rgba($color: #000000, $alpha: 0.5);
-    @include modalBG();
-
-    text-align: center;
-
-    width: 100vw;
-    height: 100vh;
-
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    // z-index: 999;
-    // display: inline-block;
-
-    cursor: pointer;
-}
-
 .dialogModal {
     // border: 2px solid #ff0000;
 
@@ -341,26 +320,45 @@
     // z-index: 999;
     // display: inline-block;
 
-    .dialogBox {
+    .dialogHotspot {
         // border: 2px solid #ff0000;
+
+        // background: rgba($color: #000000, $alpha: 0.5);
+        @include modalBG();
+
+        text-align: center;
+
+        width: 100vw;
+        height: 100vh;
+
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        // z-index: 999;
+        // display: inline-block;
+
+        cursor: pointer;
+    }
+
+    .dialogBox {
+        // border: 2px solid #00ffff;
         border: 2px solid #999999;
 
-        // background: #ffffff;
         background: rgba($color: #ffffff, $alpha: 1);
         // @include modalBG();
+        // @include bgGradient01();
 
-        // letter-spacing: 0.03125em;
+        font-size: 15px;
+        line-height: 15px;
 
-        width: 27.5%;
-        max-width: 400px;
-        // height: 40%;
-        height: 45%;
-        // height: auto;
-        max-height: 400px;
-        // max-height: 655px;
+        width: 30vw;
+        max-width: 300px;
+        height: auto;
 
         margin: 0 auto;
-        padding: 0 1.25%;
+        padding: 10px 20px;
 
         position: absolute;
         top: 20%;
@@ -371,31 +369,12 @@
         .dialogHed {
             // border: 1px solid #ff0000;
 
-            font-size: 1.25em;
+            font-size: 1.125em;
 
-            // height: 20%;
-            height: 5%;
-
-            // margin: 10%;
-            // margin: 1.25% 0 0 0;
             margin: 0;
-            padding: 5% 0;
+            // padding: 0;
 
-            // position: relative;
-
-            p {
-                // border: 1px solid #00ff00;
-
-                width: 100%;
-
-                margin: 0;
-                padding: 0;
-
-                // position: absolute;
-                // top: 50%;
-                // left: 50%;
-                // transform: translate(-50%, -50%);
-            }
+            padding: 10px 0 20px 0;
         }
 
         .dialogHed02 {
@@ -492,6 +471,7 @@
 
 .dialogModalOpen {
     z-index: 999;
+    display: initial;
 }
 
 .dialogModalClosed {
@@ -503,115 +483,29 @@
 
 
 
-/* #region ========================= DESKTOPS: 1441px+ ========================= */
-
-@media  
-    only screen and (min-device-width: 1441px) 
-    { 
-        // .employerContainer {
-        //     border: 2px solid #ff0000;
-        // }
-    }
-
-/* #endregion ========================= DESKTOPS: 1441px+ ========================= */
-
-
-
-/* #region ========================= LAPTOPS: 992px+ ========================= */
-
-@media  
-    // only screen and (min-device-width: 992px) 
-    // only screen and (min-device-width: 992px), 
-    only screen and (max-device-width: 1440px) 
-    { 
-        // .employerContainer {
-        //     border: 2px solid #00ff00;
-
-        //     .skillContainer {
-        //         // border: 2px solid #ff00ff;
-
-                .chartItem {
-                    // border: 2px solid #00ff00;
-
-                    // grid-template-columns: 72.5% 27.5% !important;
-                    grid-template-columns: 80% 20% !important;
-                }
-        //     }
-        // }
-    }
-
-/* #endregion ========================= LAPTOPS: 992px+ ========================= */
-
-
-
-/* #region ========================= TABLETS: 768px ========================= */
-
-@media  
-    // only screen and (min-device-width: 768px) 
-    // only screen and (min-device-width: 768px), 
-    only screen and (max-device-width: 991px) 
-    { 
-        .employerContainer {
-            // border: 2px solid #0000ff;
-
-            // width: 75vw;
-            // min-width: 50vw;
-            // max-width: 80vw;
-
-            .employerList {
-                // border: 2px solid #00ff00;
-
-                margin: 0 0 0 5vw;
-                // padding: 80px 0;
-
-                .employerItem {
-                    // border: 1px solid #ff0000;
-
-                    .employerInfoContainer {
-                        // border: 1px solid #00ff00;
-
-                        // h1, h2 {
-                        //     letter-spacing: 0.005em;
-                        // }
-
-                        h2 {
-                            // border: 1px solid #0000ff;
-                            width: 80%;
-                        }
-
-                        .employerDates {
-                            // border: 1px solid #ff00ff;
-                            // text-align: right;
-                            width: 17.5%;
-                        }
-                    }
-                }
-            }
-        }
-    }
-
-/* #endregion ========================= TABLETS: 768px ========================= */
-
-
-
-/* #region ========================= MOBILE: 375px ========================= */
+/* #region ========================= MOBILE: 414px ========================= */
 
 @media  
     // only screen and (min-device-width: 375px) 
+    // only screen and (min-device-width: 414px)
     // only screen and (min-device-width: 375px), 
-    only screen and (max-device-width: 767px) 
+    // only screen and (min-device-width: 414px), 
+    only screen and (max-device-width: 414px) 
     { 
         .employerContainer {
             // border: 2px solid #ff00ff;
 
-            width: 90vw;
+            font-size: 12.5px;
+            line-height: 20px;
+
+            width: 95vw;
             min-width: 50vw;
             max-width: 100vw;
 
             .employerList {
                 // border: 2px solid #00ffff;
 
-                padding: 110px 0;
+                padding: 120px 0;
                 margin: 0;
 
                 .employerItem {
@@ -635,37 +529,125 @@
                         width: 76.25%;
 
                         h1, h2 {
-                            // letter-spacing: 0.005em;
+                            // font-size: 1em;
+                            letter-spacing: -0.05em;
                             width: auto;
                         }
 
-                        h1 {
-                            font-size: 1.375em;
-                        }
+                        // h1 {
+                        //     font-size: 1.375em;
+                        // }
 
-                        h2 {
-                            font-size: 1.0625em;
-                        }
+                        // h2 {
+                        //     font-size: 1.0625em;
+                        // }
 
                         .employerDates {
                             text-align: left;
 
                             width: auto;
 
-                            padding: 0.25em 0;
+                            padding: 0 0 0.5em 0;
 
                             float: unset;
                         }
 
                         p {
-                            font-size: 0.9375em;
-                            line-height: 1.5em;
-                            padding: 0.25em 0 0 0;
+                            // font-size: 0.9375em;
+                            line-height: 1.375em;
+                            padding: 0.5em 0 0 0;
                         }
                     }
                 }
             }
         }
+
+        .dialogModal {
+            // border: 2px solid #ff0000;
+
+            .dialogBox {
+                // border: 2px solid #ff00ff;
+
+                width: 80vw;
+            }
+        }
     }
 
-/* #endregion ========================= MOBILE: 375px ========================= */
+/* #endregion ========================= MOBILE: 414px ========================= */
+
+
+
+/* #region ========================= TABLETS / CRAPTOPS: 1024px ========================= */
+
+@media  
+    // only screen and (min-device-width: 768px) 
+    // only screen and (min-device-width: 768px), 
+    // only screen and (max-device-width: 991px) 
+    only screen and (min-device-width: 1024px)
+    { 
+        // .employerContainer {
+        //     border: 2px solid #0000ff;
+        // }
+
+        // .dialogModal {
+        //     // border: 2px solid #ff0000;
+
+        //     .dialogBox {
+        //         border: 2px solid #0000ff;
+        //         // border: 2px solid #999999;
+        //     }
+        // }
+    }
+
+/* #endregion ========================= TABLETS / CRAPTOPS: 1024px ========================= */
+
+
+
+/* #region ========================= LAPTOPS: 1440px ========================= */
+
+@media  
+    // only screen and (min-device-width: 992px) 
+    // only screen and (min-device-width: 992px), 
+    // only screen and (min-device-width: 1366px)
+    only screen and (min-device-width: 1440px)
+    { 
+        // .employerContainer {
+        //     border: 2px solid #00ff00;
+        // }
+
+        // .dialogModal {
+        //     // border: 2px solid #ff0000;
+
+        //     .dialogBox {
+        //         border: 2px solid #00ff00;
+        //         // border: 2px solid #999999;
+        //     }
+        // }
+    }
+
+/* #endregion ========================= LAPTOPS: 1440px ========================= */
+
+
+
+/* #region ========================= DESKTOPS: 1920px+ ========================= */
+
+@media  
+    // only screen and (min-device-width: 1441px)
+    only screen and (min-device-width: 1920px)
+    { 
+        // .employerContainer {
+        //     border: 2px solid #ff0000;
+        // }
+
+        .dialogModal {
+            // border: 2px solid #ff0000;
+
+            .dialogBox {
+                // border: 2px solid #ff0000;
+
+                font-size: 1em;
+            }
+        }
+    }
+
+/* #endregion ========================= DESKTOPS: 1920px+ ========================= */
